# mirror

./: .gitignore  2030.ipynb  README.md  data.ipynb  demo.ipynb  demo_eval.ipynb  maps.py  nomis.ipynb  pyproject.toml  run.py
configs/: config.yaml  tune_demo.yaml
data/: 2019_region_lookup.csv  census_short.csv
model/: encoder.py  loader.py  modules.py  vae.py
requirements/: base.txt
requirments/: base.txt
src/: cli.py
src/mirror/: __init__.py  cli.py
src/mirror/dataloaders/: loader.py
src/mirror/encoders/: __init__.py  base.py  census_encoder.py  table_encoder.py  utils.py
src/mirror/eval/: density.py
src/mirror/models/: cmodules.py  cvae.py  cvae_components.py
src/mirror/runners/: helpers.py  run.py  tune.py  tuner.py
